feat(reports): table reports as ordered list
relates to #OPT-2119